--- a/PlatGame/PlatuGamez/PlatGame.csproj
+++ b/PlatGame/PlatuGamez/PlatGame.csproj
@@ -299,6 +299,7 @@
     <Content Include="Views\Home\ThankYou.cshtml" />
     <Content Include="Views\Home\Subscribe.cshtml" />
     <Content Include="Views\Home\TnC.cshtml" />
+    <Content Include="Views\Home\TestView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
